--- a/mysite/templates/homepage.html
+++ b/mysite/templates/homepage.html
@@ -5,7 +5,7 @@
     <title>Homepage</title>
 </head>
 <body>
-    <h1>Homepage</h1>
-    <p>Welcome!</p>
+    <h1>{{ header }}</h1>
+    <p>{{ message }}</p>
 </body>
 </html>
