--- a/mysite/templates/about.html
+++ b/mysite/templates/about.html
@@ -5,7 +5,9 @@
     <title>About</title>
 </head>
 <body>
-    <h1>About us</h1>
-    <p>Company site</p>
+    <h1>{{ header }}</h1>
+    <p>Director: {{ director.name }}</p>
+    <p>Address: {{address.0}}, {{address.1}}, {{address.2}}, {{address.3}}</p>
+    <p>Staff: {{staff.0}}, {{staff.1}}, {{staff.2}}</p>
 </body>
 </html>
