--- a/mysite/articles/templates/articles/article_item.html
+++ b/mysite/articles/templates/articles/article_item.html
@@ -1,10 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Article {{ id }}</title>
-</head>
-<body>
-    <h1>Article {{ id }}</h1>
-</body>
-</html>
+{% extends "base_layout.html" %}
+{% block title %}{{ article. title }}{% endblock title %}
+{% block content %}
+<div class="article-detail">
+    <h1>{{ article.title }}</h1>
+    <p>{{ article.body }}</p>
+</div>
+{% endblock content %}
