--- a/mysite/articles/templates/articles/article_list.html
+++ b/mysite/articles/templates/articles/article_list.html
@@ -1,10 +1,24 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Article List</title>
-</head>
-<body>
+{% extends "base_layout.html" %}
+{% block title %}Article List{% endblock title %}
+{% block content %}
+<main>
     <h1>Article List</h1>
-</body>
-</html>
+    <div class="articles">
+        {% for element in articles %}
+        <div class="article__item">
+            <h2>
+                <a href="{% url 'article_detail' slug=element.slug %}">
+                    {{ element.title }}
+                </a>
+            </h2>
+            <p>
+                {{ element.snippet }}
+            </p>
+            <time>
+                {{ element.date }}
+            </time>
+        </div>
+        {% endfor %}
+    </div>
+</main>
+{% endblock content %}
