--- a/mysite/articles/templates/articles/article_item.html
+++ b/mysite/articles/templates/articles/article_item.html
@@ -1,8 +1,9 @@
 {% extends "base_layout.html" %}
-{% block title %}{{ article. title }}{% endblock title %}
+{% block title %}{{ article.title }}{% endblock title %}
 {% block content %}
 <div class="article-detail">
     <h1>{{ article.title }}</h1>
+    <img src="{{ article.thumbnail.url }}" alt="">
     <p>{{ article.body }}</p>
 </div>
 {% endblock content %}
