--- a/mysite/templates/about.html
+++ b/mysite/templates/about.html
@@ -1,13 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>About</title>
-</head>
-<body>
+{% extends "base_layout.html" %}
+
+{% block content %}
     <h1>{{ header }}</h1>
     <p>Director: {{ director.name }}</p>
     <p>Address: {{address.0}}, {{address.1}}, {{address.2}}, {{address.3}}</p>
     <p>Staff: {{staff.0}}, {{staff.1}}, {{staff.2}}</p>
-</body>
-</html>
+{% endblock content %}
