--- a/mysite/templates/homepage.html
+++ b/mysite/templates/homepage.html
@@ -1,11 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Homepage</title>
-</head>
-<body>
+{% extends "base_layout.html" %}
+
+{% block content %}
     <h1>{{ header }}</h1>
     <p>{{ message }}</p>
-</body>
-</html>
+{% endblock content %}
