--- a/mysite/accounts/templates/accounts/signup.html
+++ b/mysite/accounts/templates/accounts/signup.html
@@ -1,10 +1,44 @@
 {% extends "base_layout.html" %}
 
+{% block title %}Регистрация{% endblock title %}
+
 {% block content %}
-<h1>Signup</h1>
-<form class="form" action="/accounts/signup/" method="post">
-    {% csrf_token %}
-    {{ form }}
-    <button type="submit">Sign up</button>
-</form>
+<div class="auth-container">
+    <h1>Регистрация</h1>
+
+    <form class="auth-form" action="/accounts/signup/" method="post">
+        {% csrf_token %}
+
+        {% if form.non_field_errors %}
+        <div class="form-errors">
+            {% for error in form.non_field_errors %}
+                <p class="error">{{ error }}</p>
+            {% endfor %}
+        </div>
+        {% endif %}
+
+        {% for field in form %}
+        <div class="form-group">
+            <label for="{{ field.id_for_label }}">{{ field.label }}</label>
+            {{ field }}
+            {% if field.errors %}
+            <div class="field-errors">
+                {% for error in field.errors %}
+                    <small class="error">{{ error }}</small>
+                {% endfor %}
+            </div>
+            {% endif %}
+            {% if field.help_text %}
+            <small class="help-text">{{ field.help_text }}</small>
+            {% endif %}
+        </div>
+        {% endfor %}
+
+        <button type="submit" class="auth-button">Зарегистрироваться</button>
+    </form>
+
+    <div class="auth-links">
+        <p>Уже есть аккаунт? <a href="{% url 'login' %}">Войти</a></p>
+    </div>
+</div>
 {% endblock content %}
