--- a/mysite/accounts/templates/accounts/login.html
+++ b/mysite/accounts/templates/accounts/login.html
@@ -5,7 +5,7 @@
 {% block content %}
 <div class="auth-container">
     <h1>Вход в систему</h1>
-     <form class="auth-form" action="/accounts/login/" method="post">
+     <form class="auth-form" action="{% url 'accounts:login' %}" method="post">
         {% csrf_token %}
 
         {% if form.non_field_errors %}
@@ -33,10 +33,14 @@
         </div>
         {% endfor %}
 
+        {% if request.GET.next %}
+            <input type="hidden" name="next" value="{{ request.GET.next }}">
+        {% endif %}
+
         <button type="submit" class="auth-button">Войти</button>
     </form>
 
     <div class="auth-links">
-        <p>Нет аккаунта? <a href="{% url 'signup' %}">Зарегистрироваться</a></p>
+        <p>Нет аккаунта? <a href="{% url 'accounts:signup' %}">Зарегистрироваться</a></p>
     </div>
 {% endblock content %}
