--- a/mysite/articles/templates/articles/article_item.html
+++ b/mysite/articles/templates/articles/article_item.html
@@ -33,7 +33,7 @@
     </div>
 
     <div class="article-navigation">
-        <a href="{% url 'article_list' %}" class="back-button">
+        <a href="{% url 'articles:article_list' %}" class="back-button">
             ← Вернуться к списку статей
         </a>
     </div>
