--- a/mysite/templates/base_layout.html
+++ b/mysite/templates/base_layout.html
@@ -18,19 +18,19 @@
             <nav class="navbar">
                 <ul class="nav-menu">
                     <li><a href="{% url 'homepage' %}">Главная</a></li>
-                    <li><a href="{% url 'article_list' %}">Статьи</a></li>
+                    <li><a href="{% url 'articles:article_list' %}">Статьи</a></li>
                     <li><a href="{% url 'about' %}">О нас</a></li>
 
                     {% if user.is_authenticated %}
                         <li class="auth-item">
-                            <form class="logout-form" action="/accounts/logout/" method="post">
+                            <form class="logout-form" action="{% url 'accounts:logout' %}" method="post">
                                 {% csrf_token %}
                                 <button class="logout-button" type="submit">Выйти ({{ user.username }})</button>
                             </form>
                         </li>
                     {% else %}
-                        <li class="auth-item"><a href="{% url 'login' %}" class="auth-link">Войти</a></li>
-                        <li class="auth-item"><a href="{% url 'signup' %}" class="auth-link register">Регистрация</a></li>
+                        <li class="auth-item"><a href="{% url 'accounts:login' %}" class="auth-link">Войти</a></li>
+                        <li class="auth-item"><a href="{% url 'accounts:signup' %}" class="auth-link register">Регистрация</a></li>
                     {% endif %}
                 </ul>
             </nav>
