--- a/mysite/articles/templates/articles/article_list.html
+++ b/mysite/articles/templates/articles/article_list.html
@@ -16,11 +16,19 @@
     </div>
     {% endif %}
 
+    {% if user.is_authenticated %}
+        <a href="{% url 'articles:article_create' %}" class="read-more create-button">
+                    Создать статью 📝
+        </a>
+    {% endif %}
+
     <div class="articles featured-articles">
+
+
         {% for element in articles %}
         <article class="article__item">
             <h2>
-                <a href="{% url 'article_detail' slug=element.slug %}" class="article-link">
+                <a href="{% url 'articles:article_detail' slug=element.slug %}" class="article-link">
                     {{ element.title }}
                 </a>
             </h2>
@@ -45,7 +53,7 @@
                 {% endif %}
             </div>
 
-            <a href="{% url 'article_detail' slug=element.slug %}" class="read-more">
+            <a href="{% url 'articles:article_detail' slug=element.slug %}" class="read-more">
                 Читать далее →
             </a>
         </article>
